--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,34 @@
 body {
-  background-color: #75a3e0;
   font-family: "Poppins", sans-serif;
+  height: 100%;
+  padding: 50px 0 0 0;
+}
+
+html {
+  min-height: 100%;
+  background-image: url(FFD365B9-1868-464E-8D1F-98A887FC1C9A_1_201_a.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+a {
+  color: rgb(192, 184, 184);
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .weather-app {
-  background: #aba2a2;
+  background: #858080;
+  opacity: 80%;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -12,8 +36,41 @@ body {
   padding: 30px;
 }
 
-.poppins-regular {
+header {
+  border-bottom: 1px solid rgba(148, 142, 142, 0.5);
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 3px;
+  width: 79%;
+  font-size: 16px;
+  padding: 15px 20px;
   font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+}
+
+.search-form-button {
+  background: black;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 3px;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+
+main {
+  padding: 0 0 30px 0;
+}
+
+footer {
+  border-top: 1px solid rgba(148, 142, 142, 0.5);
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 500;
+  color: rgba (0, 0, 0, 0.6);
 }
