--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,50 @@ main {
   padding: 0 0 30px 0;
 }
 
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 15px;
+}
+
+.current-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+  font-weight: bold;
+}
+
+.current-details {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.current-details strong {
+  color: white;
+}
+
+.current-temperature-container {
+  display: flex;
+}
+
+.current-temperature-icon {
+  font-size: 44px;
+  margin-top: 20px;
+}
+
+.current-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.current-temperature-unit {
+  margin-top: 19px;
+  font-size: 28px;
+}
+
 footer {
   border-top: 1px solid rgba(148, 142, 142, 0.5);
   padding: 30px 0 0 0;
