Edited JS and CSS

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ a {
 
 .weather-app {
   background: #858080;
-  opacity: 80%;
+  opacity: 85%;
   max-width: 600px;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
@@ -62,14 +62,10 @@ header {
   font-family: "Poppins", sans-serif;
 }
 
-main {
-  padding: 0 0 30px 0;
-}
-
 .weather-app-data {
   display: flex;
   justify-content: space-between;
-  padding: 30px 15px;
+  padding: 15px 15px;
 }
 
 .current-city {
@@ -80,13 +76,23 @@ main {
 }
 
 .current-details {
-  font-size: 18px;
+  font-size: 17px;
   line-height: 20px;
   font-weight: 500;
+  display: inline-block;
 }
 
 .current-details strong {
   color: white;
+}
+
+.conditions {
+  display: inline-block;
+  text-transform: lowercase;
+}
+
+.conditions::first-letter {
+  text-transform: uppercase;
 }
 
 .current-temperature-container {
@@ -94,8 +100,8 @@ main {
 }
 
 .current-temperature-icon {
-  font-size: 44px;
-  margin-top: 20px;
+  width: 88px;
+  height: 88px;
 }
 
 .current-temperature {
@@ -106,7 +112,7 @@ main {
 }
 
 .current-temperature-unit {
-  margin-top: 19px;
+  margin-top: 20px;
   font-size: 28px;
 }
 
